# django-tick

./: pyproject.toml
tests/: test_django_tick.py
