[tool.poetry]
name = "django-tick"
version = "0.1.0"
description = ""
authors = ["Fundor333 <github@fundor333.com>"]
keywords = ["django", "ticketing"]
homepage = "https://github.com/fundor333/django-tick"
repository = "https://github.com/fundor333/django-tick"


classifiers=[
      'Development Status :: 5 - Production/Stable',
      'Environment :: Web Environment',
      'Framework :: Django',
      'Framework :: Django :: 3.0',
      'Intended Audience :: Developers',
      'Operating System :: OS Independent',
      'Programming Language :: Python',
      'Programming Language :: Python :: 3',
      'Programming Language :: Python :: 3.6',
      'Programming Language :: Python :: 3.7',
      'Programming Language :: Python :: 3.8',
      'Programming Language :: Python :: 3 :: Only',
  ]

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
black = {version = "19.10b0", allow-prereleases = true, python = "^3.6", markers = "platform_python_implementation == 'CPython'"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
